--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<p>Hello, World!</p>'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"post test\"\"\"\n",
     "\n",
-    "r_get = requests.post(url=f'{BASE_URL}/test', json={\"key\": 'value'})\n",
+    "r_get = requests.post(url=f'{BASE_URL}/test?mode=name', json={\"key\": 'value'})\n",
     "r_get.content\n"
    ]
   },
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +81,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDA4MTkyOSwianRpIjoiMjc1Zjk1ZTYtMDViNS00NmFlLWEwNzEtODZiMjg2MGY1ZDQzIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMDgxOTI5LCJleHAiOjE2NjAwODU1Mjl9.9z9elhK3mKbcntDUwWUGkRtlZoJJjT_r4o2BJRecNSw\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDEwMzczNiwianRpIjoiMjU5MTgzNjktNmVhYy00N2UzLWE1YTItNzg4MDFiMzYzNWRiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMTAzNzM2LCJleHAiOjE2NjAxMDczMzZ9.pCNkT3TliJb3VZ2EQDQpsgpUY19LQG6rgPFQStvNMuM\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDA4MTkyOSwianRpIjoiMjc1Zjk1ZTYtMDViNS00NmFlLWEwNzEtODZiMjg2MGY1ZDQzIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMDgxOTI5LCJleHAiOjE2NjAwODU1Mjl9.9z9elhK3mKbcntDUwWUGkRtlZoJJjT_r4o2BJRecNSw'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDEwMzczNiwianRpIjoiMjU5MTgzNjktNmVhYy00N2UzLWE1YTItNzg4MDFiMzYzNWRiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMTAzNzM2LCJleHAiOjE2NjAxMDczMzZ9.pCNkT3TliJb3VZ2EQDQpsgpUY19LQG6rgPFQStvNMuM'}\n"
      ]
     }
    ],
@@ -212,21 +223,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'intent_1': {}, 'intent_2': {}}\n",
+      "{'intent_names': ['intent_1', 'intent_2']}\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"get intent names\"\"\"\n",
+    "\"\"\"get intents\"\"\"\n",
     "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/intents',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/intents?mode=name',\n",
     "                     cookies=cookies)\n",
     "print(r_get.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"create an intent\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/intents',\n",
@@ -307,21 +338,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'action_1': {'action_type': 'response'}, 'action_2': {'action_type': 'response'}}\n",
+      "{'action_name': ['action_1', 'action_2']}\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"get action names\"\"\"\n",
+    "\"\"\"get action\"\"\"\n",
     "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/actions',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/actions?mode=name',\n",
     "                     cookies=cookies)\n",
     "print(r_get.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"create an action\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/actions',\n",
@@ -461,21 +512,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'story_1': {'nodes': [{'type': 'default', 'dimensions': {'width': 150, 'height': 36}, 'handleBounds': {'source': [{'id': '1__handle-bottom', 'position': 'bottom', 'x': 71, 'y': 31, 'width': 8, 'height': 8}], 'target': [{'id': '1__handle-top', 'position': 'top', 'x': 71, 'y': -3, 'width': 8, 'height': 8}]}, 'computedPosition': {'x': 100, 'y': 100, 'z': 0}, 'id': '1', 'label': 'Node 1', 'position': {'x': 100, 'y': 100}}], 'edges': [], 'position': [0, 0], 'zoom': 1}, 'story_2': {}}\n",
+      "{'story_names': ['story_1', 'story_2']}\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"get story names\"\"\"\n",
+    "\"\"\"get story\"\"\"\n",
     "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/stories',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/stories?mode=name',\n",
     "                     cookies=cookies)\n",
     "print(r_get.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"create a story\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/stories',\n",
@@ -498,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"update a story\"\"\"\n",
     "content = {\n",
@@ -700,21 +779,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rule_1': {}, 'rule_2': {}}\n",
+      "{'rule_names': ['rule_1', 'rule_2']}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"get rule names\"\"\"\n",
     "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/rules',\n",
     "                     cookies=cookies)\n",
-    "print(r_get.json())\n"
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/rules?mode=name',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"create a rule\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/rules',\n",
@@ -924,12 +1024,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'tokens': {'測試': {}, '台積電': {'frequency': 1}}}\n",
+      "{'token_names': ['測試', '台積電']}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"get token names\"\"\"\n",
     "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/tokens',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/tokens?mode=name',\n",
     "                     cookies=cookies)\n",
     "print(r_get.json())\n"
    ]
