--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -330,7 +330,7 @@
     "\"\"\"create an intent\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/intents',\n",
     "                       cookies=cookies,\n",
-    "                       json={'intent_name': 'intent_1'})\n",
+    "                       json={'name': 'intent_1'})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -392,7 +392,7 @@
     "\"\"\"update & rename an intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/intents/intent_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_intent_name': 'intent_2', 'examples': ['string_1', 'string_2']})\n",
+    "                     json={'new_name': 'intent_2', 'examples': ['string_1', 'string_2']})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -413,7 +413,7 @@
     "\"\"\"rename an intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/intents/intent_2',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_intent_name': 'intent_1'})\n",
+    "                     json={'new_name': 'intent_1'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -485,7 +485,7 @@
     "\"\"\"create an action\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/actions',\n",
     "                       cookies=cookies,\n",
-    "                       json={'action_name': 'action_1', 'action_type': 'response'})\n",
+    "                       json={'name': 'action_1', 'action_type': 'response'})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -558,7 +558,7 @@
    "source": [
     "\"\"\"update & rename an action\"\"\"\n",
     "content = {\n",
-    "    'new_action_name': 'action_2',\n",
+    "    'new_name': 'action_2',\n",
     "    \"action_type\": \"response\",\n",
     "    \"data\": [\n",
     "        {\n",
@@ -595,7 +595,7 @@
     "\"\"\"rename an action\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/actions/action_2',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_action_name': 'action_1'})\n",
+    "                     json={'new_name': 'action_1'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -755,7 +755,7 @@
     "\"\"\"create a story\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/stories',\n",
     "                       cookies=cookies,\n",
-    "                       json={'story_name': 'story_1'})\n",
+    "                       json={'name': 'story_1'})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -867,7 +867,7 @@
    "source": [
     "\"\"\"update & rename a story\"\"\"\n",
     "content = {\n",
-    "    'new_story_name': 'story_2',\n",
+    "    'new_name': 'story_2',\n",
     "    \"nodes\": [\n",
     "        {\n",
     "            \"type\": \"default\",\n",
@@ -982,7 +982,7 @@
     "\"\"\"rename a story\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/stories/story_2',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_story_name': 'story_1'})\n",
+    "                     json={'new_name': 'story_1'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1055,7 +1055,7 @@
     "\"\"\"create a rule\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/rules',\n",
     "                       cookies=cookies,\n",
-    "                       json={'rule_name': 'rule_1'})\n",
+    "                       json={'name': 'rule_1'})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -1165,7 +1165,7 @@
    "source": [
     "\"\"\"update & rename a rule\"\"\"\n",
     "content = {\n",
-    "    'new_rule_name': 'rule_2',\n",
+    "    'new_name': 'rule_2',\n",
     "    \"nodes\": [\n",
     "        {\n",
     "            \"type\": \"default\",\n",
@@ -1239,7 +1239,7 @@
     "\"\"\"rename a rule\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/rules/rule_2',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_rule_name': 'rule_1'})\n",
+    "                     json={'new_name': 'rule_1'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1339,7 +1339,7 @@
     "\"\"\"create a token\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/tokens',\n",
     "                       cookies=cookies,\n",
-    "                       json={'token_name': '測試', 'frequency': 1})\n",
+    "                       json={'name': '測試', 'frequency': 1})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -1403,7 +1403,7 @@
     "\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/tokens/測試',\n",
     "                     cookies=cookies, \n",
-    "                     json={'new_token_name':'範例', 'frequency': 3})\n",
+    "                     json={'new_name':'範例', 'frequency': 3})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1424,7 +1424,7 @@
     "\"\"\"rename a token\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/tokens/範例',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_token_name': '測試'})\n",
+    "                     json={'new_name': '測試'})\n",
     "print(r_put.json())\n"
    ]
   },
