--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDIwNDAzMiwianRpIjoiNDgzMjAwZTItMTRiZC00ZjU0LWJjNzgtZWUyOGVhMmI1NmU5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjA0MDMyLCJleHAiOjE2NjAyMDc2MzJ9.RmBmhV677WyGTS9fT9RsZq1KWckqgdSxjKPZ578F4Kc\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0MTc3NCwianRpIjoiMzExNGRlMmUtMDc2ZS00ZTU1LTg1MzQtYTZmMDNiNGFiZjkyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQxNzc0LCJleHAiOjE2NjAyNDUzNzR9.Mjrsuf_a1DWQ60r8bNsF722LlsdiDx4zMClRBoEy1OM\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDIwNDAzMiwianRpIjoiNDgzMjAwZTItMTRiZC00ZjU0LWJjNzgtZWUyOGVhMmI1NmU5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjA0MDMyLCJleHAiOjE2NjAyMDc2MzJ9.RmBmhV677WyGTS9fT9RsZq1KWckqgdSxjKPZ578F4Kc'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0MTc3NCwianRpIjoiMzExNGRlMmUtMDc2ZS00ZTU1LTg1MzQtYTZmMDNiNGFiZjkyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQxNzc0LCJleHAiOjE2NjAyNDUzNzR9.Mjrsuf_a1DWQ60r8bNsF722LlsdiDx4zMClRBoEy1OM'}\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -717,12 +717,167 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Entity API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"create an entity\"\"\"\n",
+    "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/entities',\n",
+    "                       cookies=cookies,\n",
+    "                       json={'name': 'entity_1'})\n",
+    "print(r_post.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'entity_1': {}}\n",
+      "['entity_1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get entities\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/entities',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/entities?mode=name',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get an entity\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/entities/entity_1',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update an entity\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/entities/entity_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={\"content\": {'roles': ['role_1', 'role_2']}})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update & rename an entity\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/entities/entity_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'entity_2', \"content\":{'groups': ['group_1', 'group_2']}})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"rename an entity\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/entities/entity_2',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'entity_1'})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"delete an intent\"\"\"\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/project_1/entities/entity_1',\n",
+    "                           cookies=cookies)\n",
+    "print(r_delete.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Story API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
