--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0MTc3NCwianRpIjoiMzExNGRlMmUtMDc2ZS00ZTU1LTg1MzQtYTZmMDNiNGFiZjkyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQxNzc0LCJleHAiOjE2NjAyNDUzNzR9.Mjrsuf_a1DWQ60r8bNsF722LlsdiDx4zMClRBoEy1OM\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0NzI0OSwianRpIjoiNDYyYTIzYjEtYTM1ZS00OTVjLWE4ZGMtNjhhNjc0ZmViNzYyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQ3MjQ5LCJleHAiOjE2NjAyNTA4NDl9.32IJAK9Ibr0EYSyO0tTi5hARsdsd4zH6pZFzs4Xm0To\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0MTc3NCwianRpIjoiMzExNGRlMmUtMDc2ZS00ZTU1LTg1MzQtYTZmMDNiNGFiZjkyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQxNzc0LCJleHAiOjE2NjAyNDUzNzR9.Mjrsuf_a1DWQ60r8bNsF722LlsdiDx4zMClRBoEy1OM'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0NzI0OSwianRpIjoiNDYyYTIzYjEtYTM1ZS00OTVjLWE4ZGMtNjhhNjc0ZmViNzYyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQ3MjQ5LCJleHAiOjE2NjAyNTA4NDl9.32IJAK9Ibr0EYSyO0tTi5hARsdsd4zH6pZFzs4Xm0To'}\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_1': {}}\n",
-      "['intent_1']\n"
+      "{'intent_1/test': {}}\n",
+      "['intent_1/test']\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -356,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'Error message': '1 validation error for IntentNameSchema\\nnew_name\\n  expected string or bytes-like object (type=type_error)'}\n"
      ]
     }
    ],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
