--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0NzI0OSwianRpIjoiNDYyYTIzYjEtYTM1ZS00OTVjLWE4ZGMtNjhhNjc0ZmViNzYyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQ3MjQ5LCJleHAiOjE2NjAyNTA4NDl9.32IJAK9Ibr0EYSyO0tTi5hARsdsd4zH6pZFzs4Xm0To\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTI1MiwianRpIjoiMTMzYTVlYjgtOTY4MS00MTU5LTlkMzMtM2Y4Y2ViYjdiOTNiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxMjUyLCJleHAiOjE2NjAyNTQ4NTJ9.KH5CQCD9S9-NB555PobFMBl9nqxx6FuC7_Jv2vBdGGs\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI0NzI0OSwianRpIjoiNDYyYTIzYjEtYTM1ZS00OTVjLWE4ZGMtNjhhNjc0ZmViNzYyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjQ3MjQ5LCJleHAiOjE2NjAyNTA4NDl9.32IJAK9Ibr0EYSyO0tTi5hARsdsd4zH6pZFzs4Xm0To'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTI1MiwianRpIjoiMTMzYTVlYjgtOTY4MS00MTU5LTlkMzMtM2Y4Y2ViYjdiOTNiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxMjUyLCJleHAiOjE2NjAyNTQ4NTJ9.KH5CQCD9S9-NB555PobFMBl9nqxx6FuC7_Jv2vBdGGs'}\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_1/test': {}}\n",
-      "['intent_1/test']\n"
+      "{'intent_1/8': {}}\n",
+      "['intent_1/8']\n"
      ]
     }
    ],
@@ -336,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{'examples': ['string_1'], 'use_entities': ['entity_1', 'entity_2']}\n"
      ]
     }
    ],
@@ -356,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': '1 validation error for IntentNameSchema\\nnew_name\\n  expected string or bytes-like object (type=type_error)'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -398,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'Error message': 'intent_2 does not exist'}\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -467,15 +467,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_1': {'action_type': 'response'}}\n",
-      "['action_1']\n"
+      "{'action_1/8': {'action_type': 'response'}}\n",
+      "['action_1/8']\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
